k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webgitcoder
  labels:
    app: webgitcoder
    environment: production
