k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgitcoder
  namespace: webgitcoder
  labels:
    app: webgitcoder
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: webgitcoder
